--- a/HTML/Introduce_Py.html
+++ b/HTML/Introduce_Py.html
@@ -85,7 +85,7 @@
                         printはprint("出力したいもの")　このようにprintの後に括弧とダブルクオーテーション        <br>
                         を使い出力したものを囲むことによって作成できます。                                      <br>
                     </p>
-                    <p><h2>四則演算</h2>h2><br>
+                    <p><h2>四則演算</h2><br>
                         <br>
                         <br>
                         <br>
@@ -130,14 +130,14 @@
                         になりかねないと思いました。
                     </p>
                     <p><h2>参考にしたサイト</h2><br>
-                        https://www.rd.ntt/se/media/article/0074.html
-                        https://itc.tokyo/python/python-variable/ 
-                        https://techgrowup.net/python-variables/ 
-                        https://www.kikagaku.co.jp/kikagaku-blog/python-if-else-elif/#i-2 
-                        https://udemy.benesse.co.jp/development/python-work/python-for.html 
-                        https://www.sejuku.net/blog/22611
-                        https://www.javadrive.jp/python/num/index2.html#google_vignette 
-                        https://www.kikagaku.co.jp/kikagaku-blog/python-while/#i-2
+                        https://www.rd.ntt/se/media/article/0074.html<br>
+                        https://itc.tokyo/python/python-variable/ <br>
+                        https://techgrowup.net/python-variables/ <br>
+                        https://www.kikagaku.co.jp/kikagaku-blog/python-if-else-elif/#i-2   <br>
+                        https://udemy.benesse.co.jp/development/python-work/python-for.html <br>
+                        https://www.sejuku.net/blog/22611                                   <br>
+                        https://www.javadrive.jp/python/num/index2.html#google_vignette     <br>
+                        https://www.kikagaku.co.jp/kikagaku-blog/python-while/#i-2          <br>
 
                         
                     </p>
